added names and storyboards and trello

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   <div class="container d-flex h-100 align-items-center">
     <div class="mx-auto text-center">
       <h1 class="mx-auto my-0 text-uppercase">Lycanthrobia</h1>
-<!--      <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start-->
-<!--        Bootstrap.</h2>-->
-<!--      <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>-->
+      <!--      <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start-->
+      <!--        Bootstrap.</h2>-->
+      <!--      <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>-->
     </div>
   </div>
 </header>
@@ -53,7 +53,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto">
-        <h2 class="text-white mb-4">Concept</h2>
+        <h2 class="text-white mb-4">Game Concept</h2>
         <p class="text-white-50">
           The game takes place in a forest in the nighttime. Your character is a hunter and a skilled tracker who was
           out in the forest and attacked by a never before seen creature. Your character loses his gun and needs to
@@ -62,14 +62,12 @@
           allows him to see his scent trail and it’s strength. The more he exerts himself, the stronger his scent will
           become until the wolf will be onto him immediately, so before his scent becomes to strong, he needs to find a
           way to dampen his scent, which will wear off eventually. He is also skilled at hiding, but it will only work
-          if his scent is weak enough. Your character has three lives, and once those three lives are up, it is game
-          over. Your goal is to navigate around the forest, searching for items to your advantage, like diverting the
-          creatures’s attention away from you or powerups to boost your running speed. Beware the time, as a full moon
-          will activate the creature’s heightened senses, giving him the ability to track you down instantaneously.
+          if his scent is weak enough. Your goal is to navigate around the forest, searching for items to your
+          advantage, like diverting the creatures’s attention away from you.
         </p>
       </div>
     </div>
-<!--    <img class="img-fluid" src="assets/img/ipad.png" alt="..."/>-->
+    <!--    <img class="img-fluid" src="assets/img/ipad.png" alt="..."/>-->
   </div>
 </section>
 <!-- Projects-->
@@ -77,26 +75,24 @@
   <div class="container">
     <!-- Featured Project Row-->
     <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..."/>
+      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="https://lycanthropia.github.io/Lycanthropia/Images/TrelloBoardHalfWay.png" alt="..."/>
       </div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
-          <h4>Shoreline</h4>
-          <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any
-            project - even commercial projects! Download it, customize it, and publish your website!</p>
+          <h4>Trello Board</h4>
+          <p class="text-black-50 mb-0">This is our trello board during the halfway mark of our game development in the semester. </p>
         </div>
       </div>
     </div>
     <!-- Project One Row-->
     <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-      <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..."/></div>
+      <div class="col-lg-6"><img class="img-fluid" src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg" alt="..."/></div>
       <div class="col-lg-6">
         <div class="bg-black text-center h-100 project">
           <div class="d-flex h-100">
             <div class="project-text w-100 my-auto text-center text-lg-left">
-              <h4 class="text-white">Misty</h4>
-              <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else,
-                along with a description.</p>
+              <h4 class="text-white">Storyboard</h4>
+              <p class="mb-0 text-white-50">These are the first storyboards made for the game. We thought of many mechanics and features that could be added and how it might have been seen in game.</p>
               <hr class="d-none d-lg-block mb-0 ml-0"/>
             </div>
           </div>
@@ -105,12 +101,12 @@
     </div>
     <!-- Project Two Row-->
     <div class="row justify-content-center no-gutters">
-      <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..."/></div>
+      <div class="col-lg-6"><img class="img-fluid" src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg" alt="..."/></div>
       <div class="col-lg-6 order-lg-first">
         <div class="bg-black text-center h-100 project">
           <div class="d-flex h-100">
             <div class="project-text w-100 my-auto text-center text-lg-right">
-              <h4 class="text-white">Mountains</h4>
+              <h4 class="text-white">Game Concept</h4>
               <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections
                 work well responsively as well, try this theme on a small screen!</p>
               <hr class="d-none d-lg-block mb-0 mr-0"/>
@@ -126,13 +122,13 @@
   <div class="container">
     <div class="row">
       <div class="col-md-10 col-lg-8 mx-auto text-center">
-<!--        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>-->
+        <!--        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>-->
         <h2 class="text-white mb-5">Project Team</h2>
-<!--        <form class="form-inline d-flex">-->
-<!--          <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email"-->
-<!--                 placeholder="Enter email address..."/>-->
-<!--          <button class="btn btn-primary mx-auto" type="submit">Subscribe</button>-->
-<!--        </form>-->
+        <!--        <form class="form-inline d-flex">-->
+        <!--          <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email"-->
+        <!--                 placeholder="Enter email address..."/>-->
+        <!--          <button class="btn btn-primary mx-auto" type="submit">Subscribe</button>-->
+        <!--        </form>-->
       </div>
     </div>
   </div>
@@ -143,48 +139,51 @@
     <div class="row">
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card py-4 h-100">
-          <img height="450px" src="https://user-images.githubusercontent.com/47268740/110231821-3f8ca500-7ebe-11eb-971c-f17975e3d4a7.png"/>
+          <img height="450px"
+               src="https://user-images.githubusercontent.com/47268740/110231821-3f8ca500-7ebe-11eb-971c-f17975e3d4a7.png"/>
           <div class="card-body text-center">
-            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-            <h4 class="text-uppercase m-0">Address</h4>
+<!--            <i class="fas fa-map-marked-alt text-primary mb-2"></i>-->
+            <h4 class="text-uppercase m-0">Jeffrey Yu</h4>
             <hr class="my-4"/>
-            <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+            <div class="small text-black-50">Website:</div>
           </div>
         </div>
       </div>
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card py-4 h-100">
-          <img height="450px" src="https://user-images.githubusercontent.com/47268740/110592568-8aa4f300-811e-11eb-94ac-2214a7a03e14.png"/>
+          <img height="450px"
+               src="https://user-images.githubusercontent.com/47268740/110592568-8aa4f300-811e-11eb-94ac-2214a7a03e14.png"/>
           <div class="card-body text-center">
-            <i class="fas fa-envelope text-primary mb-2"></i>
-            <h4 class="text-uppercase m-0">Email</h4>
+<!--            <i class="fas fa-envelope text-primary mb-2"></i>-->
+            <h4 class="text-uppercase m-0">Michael Kwak</h4>
             <hr class="my-4"/>
-            <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+            <div class="small text-black-50"><a href="#!">...</a></div>
           </div>
         </div>
       </div>
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card py-4 h-100">
-          <img height="450px" src="https://user-images.githubusercontent.com/47268740/110231948-c6418200-7ebe-11eb-9bfd-6185b359e88c.png"/>
+          <img height="450px"
+               src="https://user-images.githubusercontent.com/47268740/110231948-c6418200-7ebe-11eb-9bfd-6185b359e88c.png"/>
           <div class="card-body text-center">
-            <i class="fas fa-mobile-alt text-primary mb-2"></i>
-            <h4 class="text-uppercase m-0">Phone</h4>
+<!--            <i class="fas fa-mobile-alt text-primary mb-2"></i>-->
+            <h4 class="text-uppercase m-0"><a href="https://wjinyan.github.io/">Jin Yan Wu</a></h4>
             <hr class="my-4"/>
-            <div class="small text-black-50">+1 (555) 902-8832</div>
+            <div class="small text-black-50">...</div>
           </div>
         </div>
       </div>
     </div>
-<!--    <div class="social d-flex justify-content-center">-->
-<!--      <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>-->
-<!--      <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>-->
-<!--      <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>-->
-<!--    </div>-->
+    <!--    <div class="social d-flex justify-content-center">-->
+    <!--      <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>-->
+    <!--      <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>-->
+    <!--      <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>-->
+    <!--    </div>-->
   </div>
 </section>
 <!-- Footer-->
 <footer class="footer bg-black small text-center text-white-50">
-<!--  <div class="container">Copyright &copy; Your Website 2021</div>-->
+  <!--  <div class="container">Copyright &copy; Your Website 2021</div>-->
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
