--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
   <title>Lycanthrobia</title>
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href=""/>
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
   <!-- Google fonts-->
@@ -117,6 +117,11 @@
     </div>
   </div>
 </section>
+<section>
+  <div class="container text-center">
+    <h3 class="mt-3">Videos of gameplay</h3>
+  </div>
+</section>
 <!-- Signup-->
 <section class="signup-section" id="signup">
   <div class="container">
@@ -140,12 +145,11 @@
       <div class="col-md-4 mb-3 mb-md-0">
         <div class="card py-4 h-100">
           <img height="450px"
-               src="https://user-images.githubusercontent.com/47268740/110231821-3f8ca500-7ebe-11eb-971c-f17975e3d4a7.png"/>
+               src="assets/img/jeffrey.png">
           <div class="card-body text-center">
-<!--            <i class="fas fa-map-marked-alt text-primary mb-2"></i>-->
             <h4 class="text-uppercase m-0">Jeffrey Yu</h4>
             <hr class="my-4"/>
-            <div class="small text-black-50">Website:</div>
+            <div class="small text-black-50">ICS Student</div>
           </div>
         </div>
       </div>
@@ -154,10 +158,9 @@
           <img height="450px"
                src="https://user-images.githubusercontent.com/47268740/110592568-8aa4f300-811e-11eb-94ac-2214a7a03e14.png"/>
           <div class="card-body text-center">
-<!--            <i class="fas fa-envelope text-primary mb-2"></i>-->
             <h4 class="text-uppercase m-0">Michael Kwak</h4>
             <hr class="my-4"/>
-            <div class="small text-black-50"><a href="#!">...</a></div>
+            <div class="small text-black-50">ACM Student</div>
           </div>
         </div>
       </div>
@@ -166,10 +169,9 @@
           <img height="450px"
                src="https://user-images.githubusercontent.com/47268740/110231948-c6418200-7ebe-11eb-9bfd-6185b359e88c.png"/>
           <div class="card-body text-center">
-<!--            <i class="fas fa-mobile-alt text-primary mb-2"></i>-->
             <h4 class="text-uppercase m-0"><a href="https://wjinyan.github.io/">Jin Yan Wu</a></h4>
             <hr class="my-4"/>
-            <div class="small text-black-50">...</div>
+            <div class="small text-black-50">ICS Student</div>
           </div>
         </div>
       </div>
