added start gif

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
           The game takes place in a forest in the nighttime. Your character is a hunter and a skilled tracker who was
           out in the forest and attacked by a never before seen creature. Your character loses his gun and needs to
           escape. However, your character’s tracking and hunting knowledge gives him the ability to be aware of his
-          scent and mask it temporarily using things like mud and water. He is able to go into a tracker mode that
-          allows him to see his scent trail and it’s strength. The more he exerts himself, the stronger his scent will
+          scent and mask it temporarily using mud. The more he exerts himself, the stronger his scent will
           become until the wolf will be onto him immediately, so before his scent becomes to strong, he needs to find a
           way to dampen his scent, which will wear off eventually. He is also skilled at hiding, but it will only work
           if his scent is weak enough. Your goal is to navigate around the forest, searching for items to your
@@ -68,31 +67,47 @@
       </div>
     </div>
     <!--    <img class="img-fluid" src="assets/img/ipad.png" alt="..."/>-->
+
+    <section class="p-3 mt-3">
+      <div class="container text-center bg-light pt-3 pb-3 mb-3">
+        <h3 class="m-3">Video of gameplay</h3>
+      </div>
+    </section>
   </div>
 </section>
 <!-- Projects-->
 <section class="projects-section bg-light" id="projects">
+  <div class="container text-center mt-2">
+    <h3>Stages of Development</h3>
+    <img width="100%" src="assets/img/startscreen.gif"/>
+  </div>
   <div class="container">
     <!-- Featured Project Row-->
     <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="https://lycanthropia.github.io/Lycanthropia/Images/TrelloBoardHalfWay.png" alt="..."/>
+      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0"
+                                          src="https://lycanthropia.github.io/Lycanthropia/Images/TrelloBoardHalfWay.png"
+                                          alt="..."/>
       </div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
           <h4>Trello Board</h4>
-          <p class="text-black-50 mb-0">This is our trello board during the halfway mark of our game development in the semester. </p>
+          <p class="text-black-50 mb-0">This is our trello board during the halfway mark of our game development in the
+            semester. </p>
         </div>
       </div>
     </div>
     <!-- Project One Row-->
     <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-      <div class="col-lg-6"><img class="img-fluid" src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg" alt="..."/></div>
+      <div class="col-lg-6"><img class="img-fluid"
+                                 src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"
+                                 alt="..."/></div>
       <div class="col-lg-6">
         <div class="bg-black text-center h-100 project">
           <div class="d-flex h-100">
             <div class="project-text w-100 my-auto text-center text-lg-left">
               <h4 class="text-white">Storyboard</h4>
-              <p class="mb-0 text-white-50">These are the first storyboards made for the game. We thought of many mechanics and features that could be added and how it might have been seen in game.</p>
+              <p class="mb-0 text-white-50">These are the first storyboards made for the game. We thought of many
+                mechanics and features that could be added and how it might have been seen in game.</p>
               <hr class="d-none d-lg-block mb-0 ml-0"/>
             </div>
           </div>
@@ -101,7 +116,9 @@
     </div>
     <!-- Project Two Row-->
     <div class="row justify-content-center no-gutters">
-      <div class="col-lg-6"><img class="img-fluid" src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg" alt="..."/></div>
+      <div class="col-lg-6"><img class="img-fluid"
+                                 src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"
+                                 alt="..."/></div>
       <div class="col-lg-6 order-lg-first">
         <div class="bg-black text-center h-100 project">
           <div class="d-flex h-100">
@@ -117,11 +134,7 @@
     </div>
   </div>
 </section>
-<section>
-  <div class="container text-center">
-    <h3 class="mt-3">Videos of gameplay</h3>
-  </div>
-</section>
+
 <!-- Signup-->
 <section class="signup-section" id="signup">
   <div class="container">
