added trello and brainstorming imgs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Concept</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Storyboard</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#development">Development</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#storyboard">Storyboard</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Team</a></li>
       </ul>
     </div>
@@ -59,28 +60,33 @@
           out in the forest and attacked by a never before seen creature. Your character loses his gun and needs to
           escape. However, your character’s tracking and hunting knowledge gives him the ability to be aware of his
           scent and mask it temporarily using mud. The more he exerts himself, the stronger his scent will
-          become until the wolf will be onto him immediately, so before his scent becomes to strong, he needs to find a
+          become until the wolf is onto him immediately, so before his scent becomes too strong, he needs to find a
           way to dampen his scent, which will wear off eventually. He is also skilled at hiding, but it will only work
-          if his scent is weak enough. Your goal is to navigate around the forest, searching for items to your
-          advantage, like diverting the creatures’s attention away from you.
+          if his scent is weak enough. Your goal is to navigate around the forest, finding items to your
+          advantage and diverting the creatures’s attention away from you.
         </p>
       </div>
     </div>
     <!--    <img class="img-fluid" src="assets/img/ipad.png" alt="..."/>-->
 
     <section class="p-3 mt-3">
-      <div class="container text-center bg-light pt-3 pb-3 mb-3">
-        <h3 class="m-3">Video of gameplay</h3>
+      <div class="container text-center bg-light pt-3 pb-3">
+        <h2 class="m-3">Video of gameplay</h2>
       </div>
     </section>
   </div>
 </section>
-<!-- Projects-->
-<section class="projects-section bg-light" id="projects">
-  <div class="container text-center mt-2">
-    <h3>Stages of Development</h3>
+<!-- Development-->
+<section class="bg-light pt-5" id="development">
+  <div class="container mt-2">
+    <h2 class="text-center">Development</h2>
+    <h4>Start screen:</h4>
     <img width="100%" src="assets/img/startscreen.gif"/>
   </div>
+</section>
+<!-- Projects/Trello-->
+<section class="projects-section bg-light">
+  <h2 class="text-center mb-5">Trello Board</h2>
   <div class="container">
     <!-- Featured Project Row-->
     <div class="row align-items-center no-gutters mb-4 mb-lg-5">
@@ -90,47 +96,45 @@
       </div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
-          <h4>Trello Board</h4>
+          <h4>Half-way Mark</h4>
           <p class="text-black-50 mb-0">This is our trello board during the halfway mark of our game development in the
             semester. </p>
         </div>
       </div>
     </div>
-    <!-- Project One Row-->
-    <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-      <div class="col-lg-6"><img class="img-fluid"
-                                 src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"
-                                 alt="..."/></div>
-      <div class="col-lg-6">
-        <div class="bg-black text-center h-100 project">
-          <div class="d-flex h-100">
-            <div class="project-text w-100 my-auto text-center text-lg-left">
-              <h4 class="text-white">Storyboard</h4>
-              <p class="mb-0 text-white-50">These are the first storyboards made for the game. We thought of many
-                mechanics and features that could be added and how it might have been seen in game.</p>
-              <hr class="d-none d-lg-block mb-0 ml-0"/>
-            </div>
-          </div>
+    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0"
+                                          src="assets/img/trello-completion.png"
+                                          alt="..."/>
+      </div>
+      <div class="col-xl-4 col-lg-5">
+        <div class="featured-text text-center text-lg-left">
+          <h4>Finale</h4>
+          <p class="text-black-50 mb-0">This is our trello board near the end of game development. </p>
         </div>
       </div>
     </div>
-    <!-- Project Two Row-->
-    <div class="row justify-content-center no-gutters">
-      <div class="col-lg-6"><img class="img-fluid"
-                                 src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"
-                                 alt="..."/></div>
-      <div class="col-lg-6 order-lg-first">
-        <div class="bg-black text-center h-100 project">
-          <div class="d-flex h-100">
-            <div class="project-text w-100 my-auto text-center text-lg-right">
-              <h4 class="text-white">Game Concept</h4>
-              <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections
-                work well responsively as well, try this theme on a small screen!</p>
-              <hr class="d-none d-lg-block mb-0 mr-0"/>
-            </div>
-          </div>
-        </div>
+  </div>
+  </div>
+</section>
+<section>
+  <div class="bg-black text-white text-center p-4" id="storyboard">
+    <h2>Storyboard</h2>
+    <div class="row justify-content-center p-4">
+      <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"/>
       </div>
+      <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"/>
+      </div>
+    </div>
+    <h2>Assets Brainstorming</h2>
+    <div class="row justify-content-center p-4">
+      <div class="col-lg-12"><img src="assets/img/ConceptualizingAssets.png"/>
+      </div>
+    </div>
+    <h2>Final Assets</h2>
+    <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"/>
+    </div>
+    <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"/>
     </div>
   </div>
 </section>
