included assets and development stages

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Concept</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#development">Development</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#storyboard">Storyboard</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#trello">Trello</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Team</a></li>
       </ul>
     </div>
@@ -79,13 +80,28 @@
 <!-- Development-->
 <section class="bg-light pt-5" id="development">
   <div class="container mt-2">
-    <h2 class="text-center">Development</h2>
-    <h4>Start screen:</h4>
-    <img width="100%" src="assets/img/startscreen.gif"/>
+    <h2 class="text-center">Stages of Development</h2>
+    <!--    <h4>Start screen:</h4>-->
+    <!--    <img width="600px" height="300px" src="assets/img/startscreen.gif"/>-->
+    <h3>Beginning</h3>
+    <p>In the beginning, we worked on the level, adding trees and rivers to create forest scene. We also implemented the
+      first-person controller and imported character models for the hunter and werewolf.</p>
+
+    <h3>Midpoint</h3>
+    <p>In the midpoint of our project, we worked on animations for the werewolf and implementing the enemy AI which
+      included the patrol/wander, chase, and attack states. We also worked on implementing the gun which includes
+      animation and
+      damage to the werewolf</p>
+
+    <h3>Final</h3>
+    <p>Towards the end of the semester, we worked mainly on fixing bugs we encountered and resolving conflicting changes
+      in our commits. We also decided to change up the scene to have bigger trees for our forest and worked on set
+      design, adding high textured water, flowing grass, and some skeletons with jump scare sounds. We finalized the
+      game with the menu, game over, and win screens.</p>
   </div>
 </section>
 <!-- Projects/Trello-->
-<section class="projects-section bg-light">
+<section class="bg-light" id="trello">
   <h2 class="text-center mb-5">Trello Board</h2>
   <div class="container">
     <!-- Featured Project Row-->
@@ -114,6 +130,7 @@
         </div>
       </div>
     </div>
+    <p><a href="https://trello.com/b/gjWd2Off/project-2-lycanthrobia">Here is a link to our Trello Board.</a></p>
   </div>
   </div>
 </section>
@@ -126,15 +143,17 @@
       <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"/>
       </div>
     </div>
-    <h2>Assets Brainstorming</h2>
+    <h2>Sketches for Assets</h2>
     <div class="row justify-content-center p-4">
       <div class="col-lg-12"><img src="assets/img/ConceptualizingAssets.png"/>
       </div>
     </div>
-    <h2>Final Assets</h2>
-    <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"/>
-    </div>
-    <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"/>
+    <h2 class="mt-3 mb-5">Final Assets</h2>
+    <div class="row justify-content-center">
+      <div class="col-lg-3"><img width="300px" height="300px" src="assets/img/MeatBone.png"/>
+      </div>
+      <div class="col-lg-3"><img width="300px" height="300px" src="assets/img/MudPuddle.png"/>
+      </div>
     </div>
   </div>
 </section>
