added content to development

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
 
     <section class="p-3 mt-3">
       <div class="container text-center bg-light pt-3 pb-3">
+        <h2 class="m-3">Trailer</h2>
+        <div class="iframe-container">
+        <iframe width="800" height="600" src="https://www.youtube.com/embed/4WndBVlu524" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
         <h2 class="m-3">Video of gameplay</h2>
       </div>
     </section>
@@ -86,8 +93,12 @@
     <h3>Beginning</h3>
     <p>In the beginning, we worked on the level, adding trees and rivers to create forest scene. We also implemented the
       first-person controller and imported character models for the hunter and werewolf.</p>
-
-    <h3>Midpoint</h3>
+    <div class="row">
+      <div class="col-lg-6"><img class="img-fluid" src="assets/img/FirstScene.png"></div>
+      <div class="col-lg-3"><img class="img-fluid" src="assets/img/hunter.png"></div>
+      <div class="col-lg-3"><img class="img-fluid" src="assets/img/werewolfprefab.png"></div>
+    </div>
+    <h3 class="mt-5">Midpoint</h3>
     <p>In the midpoint of our project, we worked on animations for the werewolf and implementing the enemy AI which
       included the patrol/wander, chase, and attack states. We also worked on implementing the gun which includes
       animation and
@@ -98,12 +109,21 @@
       in our commits. We also decided to change up the scene to have bigger trees for our forest and worked on set
       design, adding high textured water, flowing grass, and some skeletons with jump scare sounds. We finalized the
       game with the menu, game over, and win screens.</p>
+    <div class="row">
+      <div class="col-lg-4"><img class="img-fluid" src="assets/img/shed.png"></div>
+      <div class="col-lg-4"><img class="img-fluid" src="assets/img/shed.png"></div>
+    </div>
+    <div class="row align-content-center p-3">
+      <div class="col"><img class="img-fluid" src="assets/img/startscreen.gif"></div>
+    </div>
+  </div>
   </div>
 </section>
 <!-- Projects/Trello-->
-<section class="bg-light" id="trello">
-  <h2 class="text-center mb-5">Trello Board</h2>
-  <div class="container">
+<section class="bg-light pt-5" id="trello">
+
+  <div class="container bg-light">
+    <h2 class="text-center mb-5">Trello Board</h2>
     <!-- Featured Project Row-->
     <div class="row align-items-center no-gutters mb-4 mb-lg-5">
       <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0"
@@ -111,9 +131,10 @@
                                           alt="..."/>
       </div>
       <div class="col-xl-4 col-lg-5">
-        <div class="featured-text text-center text-lg-left">
+        <div class="featured-text text-center text-lg-left pl-5">
           <h4>Half-way Mark</h4>
-          <p class="text-black-50 mb-0">This is our trello board during the halfway mark of our game development in the
+          <p class="text-black-50 mb-0 ml-2">This is our trello board during the halfway mark of our game development in
+            the
             semester. </p>
         </div>
       </div>
@@ -124,9 +145,9 @@
                                           alt="..."/>
       </div>
       <div class="col-xl-4 col-lg-5">
-        <div class="featured-text text-center text-lg-left">
+        <div class="featured-text text-center text-lg-left pl-5">
           <h4>Finale</h4>
-          <p class="text-black-50 mb-0">This is our trello board near the end of game development. </p>
+          <p class="text-black-50 mb-0 ml-2">This is our trello board near the end of game development. </p>
         </div>
       </div>
     </div>
