--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
   <div class="bg-black text-white text-center p-4" id="storyboard">
     <h2>Storyboard</h2>
     <div class="row justify-content-center p-4">
-      <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"/>
+      <div class="col-lg-6"><img class="img-fluid" src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"/>
       </div>
-      <div class="col-lg-6"><img src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"/>
+      <div class="col-lg-6"><img class="img-fluid" src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"/>
       </div>
     </div>
     <h2>Sketches for Assets</h2>
     <div class="row justify-content-center p-4">
-      <div class="col-lg-12"><img src="assets/img/ConceptualizingAssets.png"/>
+      <div class="col-lg-12"><img class="img-fluid" src="assets/img/ConceptualizingAssets.png"/>
       </div>
     </div>
     <h2 class="mt-3 mb-5">Final Assets</h2>
