--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
         </div>
+        <h4 class="mt-3"><a href="https://wjinyan.itch.io/lycanthrobia" target="_blank">Check out our game on itch.io!</a></h4>
       </div>
     </section>
   </div>
@@ -127,13 +128,15 @@
   </div>
   </div>
 </section>
-<section>
-  <div class="bg-black text-white text-center p-4" id="storyboard">
-    <h2>Storyboard</h2>
+<section class="bg-black text-white text-center p-4">
+  <div class="container" id="storyboard">
+    <h2 class="pt-5">Storyboard</h2>
     <div class="row justify-content-center p-4">
-      <div class="col-lg-6"><img class="img-fluid" src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"/>
+      <div class="col-lg-6"><img class="img-fluid"
+                                 src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_1.jpg"/>
       </div>
-      <div class="col-lg-6"><img class="img-fluid" src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"/>
+      <div class="col-lg-6"><img class="img-fluid"
+                                 src="https://lycanthropia.github.io/Lycanthropia/Images/Lycanthropia_Concept_2.jpg"/>
       </div>
     </div>
     <h2>Sketches for Assets</h2>
@@ -181,7 +184,7 @@
         </div>
       </div>
     </div>
-    <h4 class="text-center"><a href="https://trello.com/b/gjWd2Off/project-2-lycanthrobia">Here is a link to our Trello
+    <h4 class="text-center"><a href="https://trello.com/b/gjWd2Off/project-2-lycanthrobia" target="_blank">Here is a link to our Trello
       Board</a></h4>
   </div>
   </div>
@@ -193,7 +196,7 @@
     <p class="text-black-50">This is our Miro board, where we jotted down our brainstorms in the beginning of the
       project.</p>
     <img height="75%" width="75%" src="assets/img/miroboard.png">
-    <h4 class="text-center mt-5 pb-5"><a href="https://miro.com/app/board/o9J_lTD4msg=/">Here is a link to our Miro
+    <h4 class="text-center mt-5 pb-5"><a href="https://miro.com/app/board/o9J_lTD4msg=/" target="_blank">Here is a link to our Miro
       Board</a></h4>
   </div>
 </section>
